FIX: fix combatant token size on firefox and foundry app FEAT: add visual effect when token is defetead and invisible

--- a/styles/main.css
+++ b/styles/main.css
@@ -33,16 +33,22 @@
       align-items: stretch;
 
       .combatant-img {
-          --size: 85px;
-        aspect-ratio: 1;
-        min-width: 55px;
+        --size: clamp(55px, 4.5vw, 100px);
+        aspect-ratio: 1 / 1;
+
         width: var(--size);
         height: var(--size);
+
         flex: 0 0 var(--size);
-        min-height: 55px;
+        max-width: var(--size);
+
+        min-width: var(--size);
+        min-height: var(--size);
+
         border-radius: 50%;
         object-fit: cover;
         object-position: center top;
+
         border: 3px solid var(--secondary-side-color);
         background: #222;
         box-shadow: 0 0 8px var(--primary-side-color);
@@ -50,12 +56,24 @@
 
       &.active {
         .combatant-img {
-            --size: 127px;
-          min-width: 82px;
-          min-height: 82px;
+          --size: clamp(85px, 6.5vw, 150px);
           border-color: var(--secondary-side-color);
           box-shadow: 0 0 5px var(--primary-side-color), inset 0 0 5px var(--secondary-side-color);
           filter: saturate(1.2);
+        }
+      }
+
+      &.defeated {
+        filter: saturate(0.7);
+        
+        .combatant-img {
+          box-shadow: 0px 0px 10px darkred;
+        }
+      }
+
+       &.invisible {
+        .combatant-img {
+          opacity: 0.6;
         }
       }
 
@@ -70,7 +88,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        font-size: 35px;
+        font-size: 2vw;
         color: white;
         filter: drop-shadow(0 0 8px var(--color-shadow-primary));
         pointer-events: none;
@@ -99,7 +117,7 @@
 
       .request-orbit {
         position: absolute;
-        inset: -8px;
+        inset: -0.45vw;
         pointer-events: none;
         z-index: 5;
         display: flex;
@@ -108,8 +126,8 @@
       }
 
       .satellite {
-        width: 16px;
-        height: 16px;
+        width: 0.9vw;
+        height: 0.9vw;
         background-color: var(--primary-side-color);
         border-radius: 50%;
         border: 2px solid var(--secondary-side-color);
